--- a/views/tempatmakan.html
+++ b/views/tempatmakan.html
@@ -27,50 +27,61 @@
         <div class="contoh">
             <div class="kelas">
                 <img src="/assets/wisata-kuliner-magetan.jpeg" alt="">
-                <a href="#"><div class="overlay">Wisata Kuliner Magetan</div></a>
+                <a href="https://maps.app.goo.gl/LwcfEWqJ3fwxJCPL6"><div class="overlay">Wisata Kuliner Magetan</div></a>
             </div>
             <div class="kelas">
                 <img src="/assets/bekicot-magetan.jpeg" alt="">
-                <a href=""><div class="overlay">Bekicot Magetan</div></a>
+                <a href="https://maps.app.goo.gl/dGedU1tdPNtLmNVb7
+                "><div class="overlay">Bekicot Magetan</div></a>
             </div>
             <div class="kelas">
                 <img src="/assets/sop-buntut-dan-est-teler-jeng-sri.jpeg" alt="">
-                <a href=""><div class="overlay">Sop Buntut dan <br> Es Teler Jeng Sri</div></a>
+                <a href="https://maps.app.goo.gl/mY1vKNui1p8wnB9L6
+                "><div class="overlay">Sop Buntut dan <br> Es Teler Jeng Sri</div></a>
             </div>
             <div class="kelas">
                 <img src="/assets/warung-nasi-pecel-bu-parti.jpeg" alt="">
-                <a href=""><div class="overlay">Warung Nasi Pecel <br> Bu Parti</div></a>
+                <a href="https://maps.app.goo.gl/nWtvM49s4CV841Bv9
+                "><div class="overlay">Warung Nasi Pecel <br> Bu Parti</div></a>
             </div>
             <div class="kelas">
                 <img src="/assets/korean-grill.png" alt="">
-                <a href=""><div class="overlay">kedai RESEP KUNO <br>(korean and javanesse grill)</div></a>
+                <a href="https://maps.app.goo.gl/NWz4ATakdQJ4Wabc9
+                "><div class="overlay">kedai RESEP KUNO <br>(korean and javanesse grill)</div></a>
             </div>
             <div class="kelas">
                 <img src="/assets/rumah-kuliner-kang-ethes.jpeg" alt="">
-                <a href=""><div class="overlay">Rumah Kuliner Kang Ethes</div></a>
+                <a href="https://maps.app.goo.gl/1Q8YkHvUUU8RYZzk8
+                "><div class="overlay">Rumah Kuliner Kang Ethes</div></a>
             </div>
             <div class="kelas">
                 <img src="/assets/bambu-muda.jpeg" alt="">
-                <a href=""><div class="overlay">Bambu Muda</div></a>
+                <a href="https://maps.app.goo.gl/eSegiU765VKmwxP29
+                "><div class="overlay">Bambu Muda</div></a>
             </div>
             <div class="kelas">
                 <img src="/assets/rm-pawon-sewu.jpeg" alt="">
-                <a href=""><div class="overlay">Rumah Makan <br> Pawon Sewu</div></a>
+                <a href="https://maps.app.goo.gl/ukkECdPE2oWohspP8
+                "><div class="overlay">Rumah Makan <br> Pawon Sewu</div></a>
             </div>
             <div class="kelas">
                 <img src="/assets/sambelan-layah.jpeg" alt="">
-                <a href=""><div class="overlay">Sambelan Layah <br> Asli Magetan</div></a>
+                <a href="https://maps.app.goo.gl/1FVLV2cVagGmv73T8
+                "><div class="overlay">Sambelan Layah <br> Asli Magetan</div></a>
             </div>
             <div class="kelas">
                 <img src="/assets/restoran-joglonekarto.jpeg" alt="">
-                <a href=""><div class="overlay">Restoran Joglonekarto</div></a>
+                <a href="https://maps.app.goo.gl/s4CikHW1dbvBtBwi8
+                "><div class="overlay">Restoran Joglonekarto</div></a>
             </div><div class="kelas">
                 <img src="/assets/mammie.png" alt="">
-                <a href=""><div class="overlay">Mammie Kuliner</div></a>
+                <a href="https://maps.app.goo.gl/WyABEHgB9o6D531U9
+                "><div class="overlay">Mammie Kuliner</div></a>
             </div>
             <div class="kelas">
                 <img src="/assets/getuk-pisang-diana.jpeg" alt="">
-                <a href=""><div class="overlay">Gethuk Diana</div></a>
+                <a href="https://maps.app.goo.gl/pu5tMBMNNYqQj9TBA
+                "><div class="overlay">Gethuk Diana</div></a>
             </div> 
         </div>
     </div>
@@ -82,7 +93,7 @@
   <footer>
     <p>&copy; copyright 2024 Kelompok 6 Pemrograman Web A-081</p>
     <p>
-        <a href="#home">Home</a> |
+        <a href="/views/index.html">Home</a> |
         <a href="#about">About Us</a> |
         <a href="#contact">Contact</a>
     </p>
