update destinasi wisata

--- a/view/tempat-wisata copy.html
+++ b/view/tempat-wisata copy.html
@@ -72,7 +72,7 @@
         </article>
 
         <article class="card__article">
-          <img src="/images/bukit-mongkrang.jpeg" alt="" class="card__img">
+          <img src="/images/bukit-mongkrang.jpg" alt="" class="card__img">
           <div class="card__data">
             <span class="card__description"></span>
             <h2 class="card__title">Gunung Mongkrang</h2>
@@ -81,20 +81,20 @@
         </article>
 
         <article class="card__article">
-          <img src="/images/mojosemi-park.jpg" alt="" class="card__img">
+          <img src="/images/mojosemi.jpg" alt="" class="card__img">
           <div class="card__data">
             <span class="card__description"></span>
             <h2 class="card__title">Mojosemi Park</h2>
-            <a href="/view/gunung-mongkrang.html" class="card__button">Baca Selengkapnya</a>
+            <a href="/view/mojosemi-park.html" class="card__button">Baca Selengkapnya</a>
           </div>
         </article>
 
         <article class="card__article">
-          <img src="/images/geni-langit.jpeg" alt="" class="card__img">
+          <img src="/images/geni-langit-htm.jpg" alt="" class="card__img">
           <div class="card__data">
             <span class="card__description"></span>
             <h2 class="card__title">Geni Langit</h2>
-            <a href="/view/gunung-mongkrang.html" class="card__button">Baca Selengkapnya</a>
+            <a href="/view/geni-langit.html" class="card__button">Baca Selengkapnya</a>
           </div>
         </article>
 
@@ -103,7 +103,7 @@
           <div class="card__data">
             <span class="card__description"></span>
             <h2 class="card__title">Cemoro Sewu</h2>
-            <a href="/view/gunung-mongkrang.html" class="card__button">Baca Selengkapnya</a>
+            <a href="/view/cemoro-Sewu.html" class="card__button">Baca Selengkapnya</a>
           </div>
         </article>
 
