--- a/view/cemoro-sewu.html
+++ b/view/cemoro-sewu.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Telaga Wahyu</title>
+    <title>Cemoro Sewu</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="/styles/style-new-page.css">
@@ -42,11 +42,11 @@
             </button>
         </div>
     </nav>
-    <div class="container-fluid banner-wahyu">
+    <div class="container-fluid banner-mongkrang">
         <div class="container text-center">
           <div class="overlay"></div>
           <div class="content">
-              <h4 class="display-6">Selamat Datang Di Telaga Wahyu</h4>
+              <h4 class="display-6">Selamat Datang Di Gunung Mongkrang</h4>
               <h3 class="display-3">Nikmati pesonanya</h3>
               <a href="#lokasi" class="login-button">Menuju Tempat</a>
                 <button class="navbar-toggler pe-0" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
@@ -61,7 +61,7 @@
             <h2 class="display-3" id="deskripsi">
                 Deskripsi
             </h2>
-            <p>Telaga Wahyu dikenal sebagai Telaga Wurung. telaga ini terkenal dengan mitos bahwa pasangan yang belum menikah yang berkunjung ke sini akan mengalami putus cinta. Telaga Wahyu menawarkan berbagai fasilitas dan aktivitas menarik seperti memancing, menaiki becak air berbentuk bebek kayuh, flying fox, dan spot foto yang Instagramable. Fasilitas di sekitar telaga meliputi area parkir, warung makan, mushola, toilet, dan area bermain anak​.</p>
+            <p>Cemoro Sewu adalah pintu gerbang pendakian untuk menuju ke Gunung Lawu dari jalur Jawa Timur. Selain itu, terdapat fasititas berupa Mushola, Lahan Parkir, Pos istirahat, Toilet umum.</p>
             <div class="row pt-4">
               <div class="col-md-4">
                 <span class="circle">
@@ -69,7 +69,7 @@
                 </span>
                 
                 <h3 class="mt-3"> Tentang </h3>
-                <p>Telaga Wahyu, danau alami dari magetan, Jawa Timur, menawarkan keindahan alam yang tenang dan segar serta memiliki banyak spot hiburan bagi keluarga maupun teman.</p>
+                <p>Cemoro Sewu di Magetan menawarkan trekking gunung, udara sejuk, dan pemandangan alam yang memukau.</p>
 
                 
               </div>
@@ -81,8 +81,8 @@
                 
                 <h3 class="mt-3"> Harga Tiket Masuk</h3>
                 <p>Tiket Masuk :<br>
-                  Dewasa Rp 5.000<br>
-                  Anak-anak Rp 3.000</p>
+                  Segala Umur Rp 10.000<br>
+                </p>
 
                 
               </div>
@@ -93,7 +93,7 @@
                 </span>
                 
                 <h3 class="mt-3">Aktivitas dan Fasilitas</h3>
-                <p>Di Telaga Wahyu, pengunjung bisa menikmati becak air seharga Rp 40.000 per putaran, selain memancing. Ada juga arena bermain anak-anak di tepi telaga. Fasilitasnya lengkap, termasuk tempat parkir, warung makan, mushola, dan toilet.</p>
+                <p>Cemoro Sewu memiliki aktivitas berupa pendakian Gunung Lawu, area camping, spot fotografi. dan memiliki fasilitas area parkir, warung makan, penginapan, toilet umum, pusat informasi, tempat ibadah.</p>
 
                 
               </div>
@@ -107,10 +107,11 @@
     <div class="container-fluid pt-5 pb-5" id="lokasi">
       <div class="container text-center">
         <h2 class="display-3">Lokasi</h2>
-        <p>Telaga Wahyu atau Telaga Wurung yang berada di Kecamatan Plaosan Kabupaten Magetan merupakan salah satu daya tarik wisata yang mudah dijangkau karena terletak di samping jalan raya Sarangan. Telaga dengan luas ±10 hektar dan kedalaman ±16 m ini berjarak sekitar 4 km dari Telaga Sarangan. Disekitar Telaga Wahyu saat ini dikembangan berbagai jenis tanaman seperti buah-buahan, sayuran, tanaman perkebunan seperti tembakau dan kopi dan juga terdapat tanaman hias. Selain itu juga terdapat terdapat ikan-ikan yang dipelihara untuk spot memancing.</p>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15816.273015618966!2d111.22636693398931!3d-7.675811761878357!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e798e8758fa9bbb%3A0x161f02c87be1dcf5!2sTelaga%20Wahyu!5e0!3m2!1sid!2sid!4v1717310507670!5m2!1sid!2sid" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <p>Cemoro Sewu terletak di perbatasan antara Magetan, Jawa Timur, dan Karanganyar, Jawa Tengah. Berada di ketinggian Gunung Lawu, lokasi ini dikenal sebagai pintu masuk utama pendakian Gunung Lawu dari sisi timur, menawarkan udara sejuk dan pemandangan pegunungan yang indah. Lokasinya mudah diakses dari Tawangmangu dan Sarangan.</p>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3954.175264478226!2d111.18668587741881!3d-7.664297972633011!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e798df1913548dd%3A0xe95d6dcbaf046c67!2sCemoro%20Sewu!5e0!3m2!1sid!2sid!4v1717391467329!5m2!1sid!2sid" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
     </div>
+
     <section class="client">
       <div class="card mx-auto pl-5 mr-5 pt-5 pb-5 section_container client_container">
         <h2 class="text-center section__header">What our client say</h2>
@@ -155,6 +156,7 @@
           <a href="#contact">Contact</a>
       </p>
   </footer>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
