--- a/view/geni-langit.html
+++ b/view/geni-langit.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Telaga Wahyu</title>
+    <title>Geni Langit</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="/styles/style-new-page.css">
@@ -42,11 +42,11 @@
             </button>
         </div>
     </nav>
-    <div class="container-fluid banner-wahyu">
+    <div class="container-fluid banner-geni_langit">
         <div class="container text-center">
           <div class="overlay"></div>
           <div class="content">
-              <h4 class="display-6">Selamat Datang Di Telaga Wahyu</h4>
+              <h4 class="display-6">Selamat Datang Di Gunung Mongkrang</h4>
               <h3 class="display-3">Nikmati pesonanya</h3>
               <a href="#lokasi" class="login-button">Menuju Tempat</a>
                 <button class="navbar-toggler pe-0" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
@@ -61,7 +61,7 @@
             <h2 class="display-3" id="deskripsi">
                 Deskripsi
             </h2>
-            <p>Telaga Wahyu dikenal sebagai Telaga Wurung. telaga ini terkenal dengan mitos bahwa pasangan yang belum menikah yang berkunjung ke sini akan mengalami putus cinta. Telaga Wahyu menawarkan berbagai fasilitas dan aktivitas menarik seperti memancing, menaiki becak air berbentuk bebek kayuh, flying fox, dan spot foto yang Instagramable. Fasilitas di sekitar telaga meliputi area parkir, warung makan, mushola, toilet, dan area bermain anak​.</p>
+            <p>Taman Wisata Genilangit merupakan potensi dari desa wisata yang menawarkan keindahan alam dan budaya. Selain itu, terdapat fasititas berupa taman, rumah pohon, hammock atau tempat tidur gantung, serta kafe yang semakin menambah kenyaman pengunjung dalam menikmati pesona pohon pinus.</p>
             <div class="row pt-4">
               <div class="col-md-4">
                 <span class="circle">
@@ -69,7 +69,7 @@
                 </span>
                 
                 <h3 class="mt-3"> Tentang </h3>
-                <p>Telaga Wahyu, danau alami dari magetan, Jawa Timur, menawarkan keindahan alam yang tenang dan segar serta memiliki banyak spot hiburan bagi keluarga maupun teman.</p>
+                <p>Wisata Genilangit menawarkan pemandangan alam, spot foto menarik, dan berbagai wahana seru di pegunungan Magetan.</p>
 
                 
               </div>
@@ -81,8 +81,8 @@
                 
                 <h3 class="mt-3"> Harga Tiket Masuk</h3>
                 <p>Tiket Masuk :<br>
-                  Dewasa Rp 5.000<br>
-                  Anak-anak Rp 3.000</p>
+                  Dewasa Rp 10.000<br>
+                  Anak-anak Rp 10.000</p>
 
                 
               </div>
@@ -93,7 +93,7 @@
                 </span>
                 
                 <h3 class="mt-3">Aktivitas dan Fasilitas</h3>
-                <p>Di Telaga Wahyu, pengunjung bisa menikmati becak air seharga Rp 40.000 per putaran, selain memancing. Ada juga arena bermain anak-anak di tepi telaga. Fasilitasnya lengkap, termasuk tempat parkir, warung makan, mushola, dan toilet.</p>
+                <p>Genilangit memiliki aktivitas berupa spot foto yang instagramable, taman bermain, taman bunga, wisata berkuda, ATV, flying fox, kegiatan outbound. memiliki berbaga fasilitas mulai dari area parkir, mushola, gazebo, toilet, hingga warung makan.</p>
 
                 
               </div>
@@ -107,8 +107,9 @@
     <div class="container-fluid pt-5 pb-5" id="lokasi">
       <div class="container text-center">
         <h2 class="display-3">Lokasi</h2>
-        <p>Telaga Wahyu atau Telaga Wurung yang berada di Kecamatan Plaosan Kabupaten Magetan merupakan salah satu daya tarik wisata yang mudah dijangkau karena terletak di samping jalan raya Sarangan. Telaga dengan luas ±10 hektar dan kedalaman ±16 m ini berjarak sekitar 4 km dari Telaga Sarangan. Disekitar Telaga Wahyu saat ini dikembangan berbagai jenis tanaman seperti buah-buahan, sayuran, tanaman perkebunan seperti tembakau dan kopi dan juga terdapat tanaman hias. Selain itu juga terdapat terdapat ikan-ikan yang dipelihara untuk spot memancing.</p>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15816.273015618966!2d111.22636693398931!3d-7.675811761878357!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e798e8758fa9bbb%3A0x161f02c87be1dcf5!2sTelaga%20Wahyu!5e0!3m2!1sid!2sid!4v1717310507670!5m2!1sid!2sid" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <p>Genilangit terletak di Poncol, Magetan, Jawa Timur. Destinasi wisata ini berada di dataran tinggi, menawarkan udara sejuk dan pemandangan pegunungan yang indah, serta mudah diakses dari pusat kota Magetan.
+        </p>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31630.49191775358!2d111.19243639123026!3d-7.703368508097404!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e798ee78a1e8a07%3A0xbd6e9bc69c4df2b9!2sGenilangit%2C%20Kec.%20Poncol%2C%20Kabupaten%20Magetan%2C%20Jawa%20Timur!5e0!3m2!1sid!2sid!4v1717389998443!5m2!1sid!2sid" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
     </div>
     <section class="client">
