--- a/view/mojosemi-park.html
+++ b/view/mojosemi-park.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Telaga Wahyu</title>
+    <title>Mojosemi Park</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="/styles/style-new-page.css">
@@ -42,11 +42,11 @@
             </button>
         </div>
     </nav>
-    <div class="container-fluid banner-wahyu">
+    <div class="container-fluid banner-mojosemi">
         <div class="container text-center">
           <div class="overlay"></div>
           <div class="content">
-              <h4 class="display-6">Selamat Datang Di Telaga Wahyu</h4>
+              <h4 class="display-6">Selamat Datang Di Mojosemi Park</h4>
               <h3 class="display-3">Nikmati pesonanya</h3>
               <a href="#lokasi" class="login-button">Menuju Tempat</a>
                 <button class="navbar-toggler pe-0" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
@@ -61,7 +61,7 @@
             <h2 class="display-3" id="deskripsi">
                 Deskripsi
             </h2>
-            <p>Telaga Wahyu dikenal sebagai Telaga Wurung. telaga ini terkenal dengan mitos bahwa pasangan yang belum menikah yang berkunjung ke sini akan mengalami putus cinta. Telaga Wahyu menawarkan berbagai fasilitas dan aktivitas menarik seperti memancing, menaiki becak air berbentuk bebek kayuh, flying fox, dan spot foto yang Instagramable. Fasilitas di sekitar telaga meliputi area parkir, warung makan, mushola, toilet, dan area bermain anak​.</p>
+            <p>Mojosemi Forest Park adalah taman hutan yang ada di Kabupaten Magetan, Jawa Timur. Tamannya memiliki luas yang cukup besar. Untuk wahana permainannya ini sendiri, sudah ada paintball, high rope adventure, outbond, flying fox, mengelilingi hutan dengan ATV, menunggang kuda, istana bola, archery, offroad dengan mobil jeep.</p>
             <div class="row pt-4">
               <div class="col-md-4">
                 <span class="circle">
@@ -69,7 +69,7 @@
                 </span>
                 
                 <h3 class="mt-3"> Tentang </h3>
-                <p>Telaga Wahyu, danau alami dari magetan, Jawa Timur, menawarkan keindahan alam yang tenang dan segar serta memiliki banyak spot hiburan bagi keluarga maupun teman.</p>
+                <p>Mojosemi Park adalah taman rekreasi alam dengan wahana seru, pemandangan indah, dan suasana hutan yang menenangkan.</p>
 
                 
               </div>
@@ -81,8 +81,8 @@
                 
                 <h3 class="mt-3"> Harga Tiket Masuk</h3>
                 <p>Tiket Masuk :<br>
-                  Dewasa Rp 5.000<br>
-                  Anak-anak Rp 3.000</p>
+                  Segala Umur Rp 35.000<br>
+                </p>
 
                 
               </div>
@@ -93,7 +93,7 @@
                 </span>
                 
                 <h3 class="mt-3">Aktivitas dan Fasilitas</h3>
-                <p>Di Telaga Wahyu, pengunjung bisa menikmati becak air seharga Rp 40.000 per putaran, selain memancing. Ada juga arena bermain anak-anak di tepi telaga. Fasilitasnya lengkap, termasuk tempat parkir, warung makan, mushola, dan toilet.</p>
+                <p>mojosemi forest park memiliki berbagai aktivitas yang dapat kita lakukan. diantaranya wahana permainan, camping ground, hunting spot foto, hingga mengunjungi Mojosemi Dinosaurus Park. fasilitas yang tersedia juga terbilang lengkap, terdapat area parkir, gazebo, toilet umum, mushola, meeting room dan tempat makan.</p>
 
                 
               </div>
@@ -107,8 +107,8 @@
     <div class="container-fluid pt-5 pb-5" id="lokasi">
       <div class="container text-center">
         <h2 class="display-3">Lokasi</h2>
-        <p>Telaga Wahyu atau Telaga Wurung yang berada di Kecamatan Plaosan Kabupaten Magetan merupakan salah satu daya tarik wisata yang mudah dijangkau karena terletak di samping jalan raya Sarangan. Telaga dengan luas ±10 hektar dan kedalaman ±16 m ini berjarak sekitar 4 km dari Telaga Sarangan. Disekitar Telaga Wahyu saat ini dikembangan berbagai jenis tanaman seperti buah-buahan, sayuran, tanaman perkebunan seperti tembakau dan kopi dan juga terdapat tanaman hias. Selain itu juga terdapat terdapat ikan-ikan yang dipelihara untuk spot memancing.</p>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15816.273015618966!2d111.22636693398931!3d-7.675811761878357!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e798e8758fa9bbb%3A0x161f02c87be1dcf5!2sTelaga%20Wahyu!5e0!3m2!1sid!2sid!4v1717310507670!5m2!1sid!2sid" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <p>Berada di sisi selatan Gunung Lawu, Bukit Mongkrang berada di Desa Mojosemi Park terletak di Sarangan, Magetan, Jawa Timur. Terletak di kaki Gunung Lawu, taman ini menawarkan udara sejuk dan pemandangan pegunungan yang menakjubkan. Lokasinya mudah diakses dari pusat kota Magetan dan berdekatan dengan Telaga Sarangan, menjadikannya destinasi ideal untuk wisata alam dan rekreasi keluarga.</p>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3954.1437440716854!2d111.21445862500374!3d-7.667691192348939!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e798c23c6af2dc3%3A0x169bacd2d0435b63!2sMojosemi%20Forest%20Park!5e0!3m2!1sid!2sid!4v1717387120404!5m2!1sid!2sid" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
     </div>
     <section class="client">
