--- a/view/gunung-mongkrang.html
+++ b/view/gunung-mongkrang.html
@@ -93,7 +93,7 @@
                 </span>
                 
                 <h3 class="mt-3">Aktivitas dan Fasilitas</h3>
-                <p>Bukit Mongkrang menawarkan pendakian dengan pemandangan indah dan area berkemah. Fasilitasnya mencakup area parkir, tempat istirahat, warung makan, mushola, dan toilet.</p>
+                <p>Bukit Mongkrang menawarkan pendakian dengan pemandangan indah dan area berkemah. Fasilitasnya mencakup area parkir, tempat istirahat, warung makan, mushola, dan toilet..</p>
 
                 
               </div>
@@ -111,50 +111,7 @@
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3954.1779363227884!2d111.18375067413584!3d-7.6640102758432205!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e798b0c75e58263%3A0xa38e75944c0974b1!2sMongkrang%20view!5e0!3m2!1sid!2sid!4v1717310599517!5m2!1sid!2sid" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
     </div>
-    <section class="client">
-      <div class="card mx-auto pl-5 mr-5 pt-5 pb-5 section_container client_container">
-        <h2 class="text-center section__header">What our client say</h2>
-        <div class="mx-auto ml-3 mr-3 client__grid">
-          <div class="card mx-auto pl-5 ml-3 client__card" style="width: 18rem;">
-            <img src="/images/client-1.jpg" alt="client" />
-            <p>
-              The booking process was seamless, and the confirmation was
-              instant. I highly recommend WDM&Co for hassle-free hotel bookings.
-            </p>
-          </div>
-          <div class="card mx-auto ml-3 client__card" style="width: 18rem;">
-            <img src="/images/client-2.jpg" alt="client" />
-            <p>
-              The website provided detailed information about hotel, including
-              amenities, photos, which helped me make an informed decision.
-            </p>
-          </div>
-          <div class="card mx-auto client__card" style="width: 18rem;">
-            <img src="/images/client-3.jpg" alt="client" />
-            <p>
-              I was able to book a room within minutes, and the hotel exceeded
-              my expectations. I appreciate WDM&Co's efficiency and reliability.
-            </p>
-          </div>
-        </div>
-      </div>
-    </section>
 
-    <div class="comment-area pt-5 pb-5">
-      <h1>Masukkan Komentar Anda</h1>
-      <textarea placeholder="Tulis sesuatu di sini..."></textarea>
-  </div>
-
-  <br>
-
-  <footer>
-      <p>&copy; copyright 2024 Kelompok 6 Pemrograman Web A-081</p>
-      <p>
-          <a href="#home">Home</a> |
-          <a href="#about">About Us</a> |
-          <a href="#contact">Contact</a>
-      </p>
-  </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
