--- a/views/kuliner/tempatmakan.css
+++ b/views/kuliner/tempatmakan.css
@@ -114,7 +114,7 @@ body, html {
 .hero {
     width: 100%;
     height: 100vh;
-    background: url('/assets/Frame2.png') no-repeat center center/cover;
+    background: url('/assets/img/Frame2.png') no-repeat center center/cover;
     align-items: center;
     justify-content: center;
     color: white;
