--- a/views/wisata/destinasi.css
+++ b/views/wisata/destinasi.css
@@ -276,7 +276,7 @@ img {
 }
 
 .banner { 
-    background: url(/assets/gambar-telaga-bg.jpeg) no-repeat center;
+    background: url('/assets/img/gambar-telaga-bg.jpeg') no-repeat center;
     background-size: cover;
     width: 100%;
     padding-top: 20%;
