--- a/views/wisata/destinasi.css
+++ b/views/wisata/destinasi.css
@@ -120,9 +120,11 @@ img {
 /*=============== CARD ===============*/
 .container {
   display: grid;
+  
   place-items: center;
   margin-inline: 1.5rem;
   padding-block: 5rem;
+  
 }
 
 .card__container {
@@ -304,12 +306,18 @@ img {
 }
 
 footer {
+  /* position: fixed; */
+  bottom: 0;
+  left: 0;
+  width: 100%;
   background-color: #333;
   color: #fff;
   text-align: center;
   padding: 20px 0;
-  width: 100%;
+  margin-top: 150px;
+  /* z-index: 999; Menempatkan footer di atas elemen-elemen lain */
 }
+
   
 footer a {
 color: #fff;
